--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,9 @@
       ga('create', 'UA-71179220-1', 'auto');
       ga('send', 'pageview');
 
+      ga('create', 'UA-71179220-1', 'auto', 'pradeep');
+
+
     </script>
   </head>
   <body>
